log/build_2024-08-04_15-29-15/RoverReceive/stderr.log
  File "/home/arno/RoombaV2Onboard/install/RoverReceive/lib/python3.10/site-packages/RoverReceive/receive_node.py", line 54
    self.get_logger().info(f"Rover Log @{time.strftime("%Y-%m-%d %H:%M")}: {received_from_arduino}")
                                                        ^
SyntaxError: f-string: unmatched '('

